Dcreator/src/objects/Applicant__c.object
<CustomObject>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <label>MiddleName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Reenter_Email_Address__c</fullName>
        <label>Reenter Email Address</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reenter_Password__c</fullName>
        <label>Reenter Password</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Security_Question_Answer__c</fullName>
        <label>Security Question Answer</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Question__c</fullName>
        <label>Security Question</label>
        <picklist>
            <picklistValues>
                <fullName>What is your mother maiden name?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>What is the name of your favorite childhood friend?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>What was your childhood nick  name?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In what city or town was your first job?</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Applicant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Verify_Email</fullName>
        <active>true</active>
        <errorConditionFormula>Email_Address__c &lt;&gt; Reenter_Email_Address__c</errorConditionFormula>
        <errorDisplayField>Reenter_Email_Address__c</errorDisplayField>
        <errorMessage>Please enter correct email address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Password</fullName>
        <active>true</active>
        <errorConditionFormula>Password__c &lt;&gt; Reenter_Password__c</errorConditionFormula>
        <errorDisplayField>Reenter_Password__c</errorDisplayField>
        <errorMessage>Please enter correct  password.</errorMessage>
    </validationRules>
</CustomObject>